compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_private_type_warnings_test6.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "type X { X }"
---
----- SOURCE CODE
type X { X }

----- WARNING
warning: Unused private constructor
  ┌─ /src/warning/wrn.gleam:1:10
  │
1 │ type X { X }
  │          ^ This private constructor is never used

Hint: You can safely remove it.
