compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_tuple.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n    pub fn main() {\n        #(1.0, \"Hello world\")\n\t\t\t\t2\n    }"
---
----- SOURCE CODE

    pub fn main() {
        #(1.0, "Hello world")
				2
    }

----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:9
  │
3 │         #(1.0, "Hello world")
  │         ^^^^^^^^^^^^^^^^^^^^^ This value is never used

Hint: You can safely remove it.
