compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__variables_redundant_comparison.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main(a) { a == a }"
---
----- SOURCE CODE
pub fn main(a) { a == a }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:18
  │
1 │ pub fn main(a) { a == a }
  │                  ^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
