compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__warn_when_src_imports_dev_dependency.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\nimport some_module\n\npub fn main() {\n  some_module.main()\n}\n"
---
----- SOURCE CODE
-- some_module.gleam
pub fn main() { Nil }

-- main.gleam

import some_module

pub fn main() {
  some_module.main()
}


----- WARNING
warning: App importing dev dependency
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import some_module
  │ ^^^^^^^^^^^^^^^^^^

The application module `test_module` is importing the module `some_module`,
but `dev_dependency`, the package it belongs to, is a dev dependency.

Dev dependencies are not included in production builds so application
modules should not import them. Perhaps change `dev_dependency` to a
regular dependency.

In a future version of Gleam this may become a compile error.
