compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__warning_private_function_never_used.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "fn main() { 5 }"
---

warning: Unused private function
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ fn main() { 5 }
  │ ^^^^^^^^^ This private function is never used

Hint: You can safely remove it.

